fix(format tiles): #MEN-1327: align items

--- a/scss/moodle/course.scss
+++ b/scss/moodle/course.scss
@@ -16,11 +16,6 @@ body[class*="course-"] {
   }
 
   #page-header {
-
-    .d-flex {
-      justify-content: right !important;
-    }
-
     #page-navbar + .ml-auto {
       order: 2;
       margin-left: 0px !important;
@@ -31,10 +26,8 @@ body[class*="course-"] {
     }
 
     #course-header {
-      display: flex;
-      justify-content: center;
+      justify-content: right;
       align-items: center;
-      margin-left: auto;
 
       @media(max-width: 666px) {
         margin-bottom: 10px;
